--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-# pip install scikit-learn,
+pip install gunicorn
+pip install scikit-learn,
 pip install pandas,
 pip install flask,
 pip install Flask Flask-RESTful,
