--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pip install gunicorn
-pip install scikit-learn,
-pip install pandas,
-pip install flask,
-pip install Flask Flask-RESTful,
-pip install virtualenv
+gunicorn
+scikit-learn
+pandas
+flask
+Flask-RESTful
+virtualenv
